--- a/ui/src/styles/VideoPlayerOverlay.css
+++ b/ui/src/styles/VideoPlayerOverlay.css
@@ -13,9 +13,9 @@
 }
 
 .overlay-video {
-    max-height: 80%;
-    max-width: 90%;
-    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .error-container {
